# serializer version: 1
# name: test_device_diagnostics
  dict({
    'device_name': 'Kitchen fountain',
    'device_type': 'welly',
    'host': '192.168.2.148',
    'is_manual': False,
    'last_update_success': True,
    'local_device_id': '188B0EAF2D7C',
    'port': 3333,
    'product_id': '@klyqa.welly-dev',
    'settings': dict({
      'alert_clean_tank_low': True,
      'alert_dirty_tank_full': True,
      'ambient_light_switch': False,
      'circulation_pump_speed': 80,
      'highest_water_output_range': 100,
      'light_switch': True,
      'lowest_water_output_range': 0,
      'radar_sensing_interval': 60,
      'radar_sensitivity': 1,
      'sensor_mode_light': True,
      'super_power_saving_mode': False,
      'telemetry': True,
      'threshold_clean_tank_low': 600,
      'threshold_dirty_tank_full': 600,
      'type': 'settings',
    }),
    'state': dict({
      'descaling': -1,
      'do_not_disturb': False,
      'drinking': dict({
        'daily_goal': 500,
        'last_time': 1756990000,
        'total_consumption': 1234,
        'volume': 40,
      }),
      'error_log': list([
        dict({
          'error': 260,
          'error_str': 'Power Supply Disconnected',
          'extra': -1,
          'level': 1,
          'ts': 3933052,
          'type': 0,
        }),
      ]),
      'heating': dict({
        'enabled': True,
        'temperature': 28,
      }),
      'light_id': 2,
      'mcu_version': dict({
        'mcu_fw': '1.58',
        'mcu_hw': '1.00',
        'w_fw': '1.35',
        'w_hw': '2.00',
      }),
      'microwave_sensor': 0,
      'mode': 1,
      'power': dict({
        'battery_level': 95,
        'charging': True,
        'status': 1,
        'supply': 0,
      }),
      'pump_status': 1,
      'state': 2,
      'tank_volume': dict({
        'clean': 499,
        'sewage': 983,
      }),
      'ts': 1756990500,
      'type': 'status',
      'ultrafiltration': dict({
        'id': '',
        'life_remaining': 77,
        'remaining_time': 77,
        'total_time': 259200,
        'type': 0,
      }),
      'water_temperature': 23,
      'water_tray_low': False,
      'wifi_parameters': dict({
        'channel': 6,
        'rssi': -70,
        'security': 3,
      }),
    }),
    'system_info': dict({
      'app_ver': '1.4.2',
      'boot': 1756990000,
      'boot_reason': 1,
      'branch': 'main',
      'build_date': 'Aug 24 2026 13:30:00',
      'chip_info': dict({
        'features': 'WiFi/BLE',
        'model': 'esp32c3',
        'version': 'v5.4.1',
      }),
      'device_id': '188B0EAF2D7C',
      'free_heap': 123456,
      'hw_revision': 2,
      'partition': 'ota_0',
      'product_id': '@klyqa.welly-dev',
      'product_name': 'Klyqa Welly',
      'sdk_ver': '2.3.0',
      'serial_number': 4711,
      'service_name': 'KLYQA-AF2D7C',
      'timestamp': 1720000000,
      'type': 'system_info',
    }),
  })
# ---
# name: test_entry_diagnostics
  dict({
    'devices': list([
      dict({
        'device_name': 'Kitchen fountain',
        'device_type': 'welly',
        'host': '192.168.2.148',
        'is_manual': False,
        'last_update_success': True,
        'local_device_id': '188B0EAF2D7C',
        'port': 3333,
        'product_id': '@klyqa.welly-dev',
        'settings': dict({
          'alert_clean_tank_low': True,
          'alert_dirty_tank_full': True,
          'ambient_light_switch': False,
          'circulation_pump_speed': 80,
          'highest_water_output_range': 100,
          'light_switch': True,
          'lowest_water_output_range': 0,
          'radar_sensing_interval': 60,
          'radar_sensitivity': 1,
          'sensor_mode_light': True,
          'super_power_saving_mode': False,
          'telemetry': True,
          'threshold_clean_tank_low': 600,
          'threshold_dirty_tank_full': 600,
          'type': 'settings',
        }),
        'state': dict({
          'descaling': -1,
          'do_not_disturb': False,
          'drinking': dict({
            'daily_goal': 500,
            'last_time': 1756990000,
            'total_consumption': 1234,
            'volume': 40,
          }),
          'error_log': list([
            dict({
              'error': 260,
              'error_str': 'Power Supply Disconnected',
              'extra': -1,
              'level': 1,
              'ts': 3933052,
              'type': 0,
            }),
          ]),
          'heating': dict({
            'enabled': True,
            'temperature': 28,
          }),
          'light_id': 2,
          'mcu_version': dict({
            'mcu_fw': '1.58',
            'mcu_hw': '1.00',
            'w_fw': '1.35',
            'w_hw': '2.00',
          }),
          'microwave_sensor': 0,
          'mode': 1,
          'power': dict({
            'battery_level': 95,
            'charging': True,
            'status': 1,
            'supply': 0,
          }),
          'pump_status': 1,
          'state': 2,
          'tank_volume': dict({
            'clean': 499,
            'sewage': 983,
          }),
          'ts': 1756990500,
          'type': 'status',
          'ultrafiltration': dict({
            'id': '',
            'life_remaining': 77,
            'remaining_time': 77,
            'total_time': 259200,
            'type': 0,
          }),
          'water_temperature': 23,
          'water_tray_low': False,
          'wifi_parameters': dict({
            'channel': 6,
            'rssi': -70,
            'security': 3,
          }),
        }),
        'system_info': dict({
          'app_ver': '1.4.2',
          'boot': 1756990000,
          'boot_reason': 1,
          'branch': 'main',
          'build_date': 'Aug 24 2026 13:30:00',
          'chip_info': dict({
            'features': 'WiFi/BLE',
            'model': 'esp32c3',
            'version': 'v5.4.1',
          }),
          'device_id': '188B0EAF2D7C',
          'free_heap': 123456,
          'hw_revision': 2,
          'partition': 'ota_0',
          'product_id': '@klyqa.welly-dev',
          'product_name': 'Klyqa Welly',
          'sdk_ver': '2.3.0',
          'serial_number': 4711,
          'service_name': 'KLYQA-AF2D7C',
          'timestamp': 1720000000,
          'type': 'system_info',
        }),
      }),
      dict({
        'device_name': 'Feeder',
        'device_type': 'foody',
        'host': '192.168.2.223',
        'is_manual': False,
        'last_update_success': True,
        'local_device_id': 'A0F26219DC34',
        'port': 3333,
        'product_id': '@klyqa.foody-dev',
        'settings': dict({
          'app_led': True,
          'app_pet_lock': False,
          'battery_work_mode': 0,
          'beep_switch': True,
          'charging_protection': 1,
          'custom_button_function': 0,
          'feed_audio_enable': True,
          'feed_audio_volume': 50,
          'telemetry': True,
          'type': 'settings',
        }),
        'state': dict({
          'adapter_state': True,
          'app_pet_lock': False,
          'battery_level': -1,
          'beep_switch': True,
          'bowl_remaining': 120,
          'bowl_state': 0,
          'custom_button': dict({
            'function': 0,
            'state': False,
          }),
          'error_log': list([
            dict({
              'error': 260,
              'error_str': 'Power Supply Disconnected',
              'ts': 1755499000,
            }),
          ]),
          'error_state': 0,
          'feeding_state': 0,
          'food_bin_state': 1,
          'last_manual_feeding': dict({
            'portions_dispensed': 2,
            'report_info': 1,
          }),
          'last_portion_weight': 8,
          'last_realtime_weight': 1234,
          'last_scheduled_feeding': dict({
            'next_feed_time': 245,
            'portions_dispensed': 3,
            'report_info': 1,
            'schedule_id': 0,
          }),
          'led_indicator': True,
          'mcu_version': dict({
            'hw_version': 2,
            'sw_version': 56,
          }),
          'power_state': True,
          'ts': 1755500000,
          'type': 'status',
          'wifi_parameters': dict({
            'channel': 1,
            'rssi': -59,
            'security': 3,
          }),
        }),
        'system_info': dict({
          'app_ver': '1.4.2',
          'boot': 1756990000,
          'boot_reason': 1,
          'branch': 'main',
          'build_date': 'Aug 24 2026 13:30:00',
          'chip_info': dict({
            'features': 'WiFi/BLE',
            'model': 'esp32c3',
            'version': 'v5.4.1',
          }),
          'device_id': 'A0F26219DC34',
          'free_heap': 123456,
          'hw_revision': 2,
          'partition': 'ota_0',
          'product_id': '@klyqa.foody-dev',
          'product_name': 'Klyqa Foody',
          'sdk_ver': '2.3.0',
          'serial_number': 4711,
          'service_name': 'KLYQA-AF2D7C',
          'timestamp': 1720000000,
          'type': 'system_info',
        }),
      }),
      dict({
        'device_name': 'Klyqa airpurifier E85DFC',
        'device_type': 'airpurifier',
        'host': '192.168.2.21',
        'is_manual': False,
        'last_update_success': True,
        'local_device_id': 'D83BDAE85DFC',
        'port': 3333,
        'product_id': '@klyqa.cleaning.airpurifier1',
        'settings': None,
        'state': dict({
          'active_command': 0,
          'active_scene': '',
          'air_volume': 500,
          'anion_state': 1,
          'anion_switch': 1,
          'aqi': 1,
          'aqi_num': 12,
          'aqil_switch': 1,
          'base_aqi': 0,
          'base_work_aqi': 0,
          'boot_mode': 0,
          'brightness': dict({
            'percentage': 80,
          }),
          'child_lock': 0,
          'color': dict({
            'blue': 240,
            'green': 40,
            'red': 160,
          }),
          'external': dict({
            'autoreset': 5000,
            'channel': 1,
            'mode': 'EXT_OFF',
            'port': 65501,
            'universe': 1,
          }),
          'fid': 'F123',
          'filter_type': 1,
          'fremain_tm': 200000,
          'fremoval_status': 0,
          'ftotal_tm': 259200,
          'key_tone': 1,
          'les': 'on',
          'mode': 'general',
          'p_level': 2,
          'pet_tm': 30,
          'peting_tm': 0,
          'pl_brightness': 50,
          'pl_switch': 1,
          'run_mode': 1,
          'slp_bright': 10,
          'status': 'on',
          'tilt_status': 0,
          'total_tm': 7200,
          'type': 'status',
          'wifi_parameters': dict({
            'channel': 11,
            'rssi': -55,
            'security': 3,
          }),
        }),
        'system_info': dict({
          'app_ver': '1.4.2',
          'boot': 1756990000,
          'boot_reason': 1,
          'branch': 'main',
          'build_date': 'Aug 24 2026 13:30:00',
          'chip_info': dict({
            'features': 'WiFi/BLE',
            'model': 'esp32c3',
            'version': 'v5.4.1',
          }),
          'device_id': 'D83BDAE85DFC',
          'free_heap': 123456,
          'hw_revision': 2,
          'partition': 'ota_0',
          'product_id': '@klyqa.cleaning.airpurifier1',
          'product_name': 'Klyqa airpurifier',
          'sdk_ver': '2.3.0',
          'serial_number': 4711,
          'service_name': 'KLYQA-AF2D7C',
          'timestamp': 1720000000,
          'type': 'system_info',
        }),
      }),
    ]),
    'entry': dict({
      'data': dict({
        'devices': dict({
          '188B0EAF2D7C': dict({
            'access_token': '**REDACTED**',
            'device_name': 'Kitchen fountain',
            'host': '192.168.2.148',
            'port': 3333,
            'product_id': '@klyqa.welly-dev',
            'product_name': 'Klyqa Welly',
          }),
          'A0F26219DC34': dict({
            'access_token': '**REDACTED**',
            'device_name': 'Feeder',
            'host': '192.168.2.223',
            'port': 3333,
            'product_id': '@klyqa.foody-dev',
            'product_name': 'Klyqa Foody',
          }),
          'D83BDAE85DFC': dict({
            'access_token': '**REDACTED**',
            'device_name': '',
            'host': '192.168.2.21',
            'port': 3333,
            'product_id': '@klyqa.cleaning.airpurifier1',
            'product_name': 'Klyqa airpurifier',
          }),
        }),
        'email': '**REDACTED**',
        'environment': 'test',
        'password': '**REDACTED**',
      }),
      'options': dict({
      }),
    }),
    'entry_state': 'loaded',
  })
# ---
